# anuga_core

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.rst  INSTALL.rst  INSTALL_UBUNTU.rst  INSTALL_UBUNYU.rst  LICENCE.txt  MANIFEST.in  README.md  README.rst  README.txt  README_NEW.md  SConstruct  anuga_requirements.txt  appveyor.yml  build_all.py  build_options.py  clean_all.py  compile_all.py  compile_parallel_all.py  create_revision_file.py  environment.yml  full_requirements.txt  install_everything.sh  meson.build  parallel_boyd_pipe_operator.py  porting_notes.rst  pydistutils.cfg  pyproject.toml  recompile.sh  requirements.txt  run_auto_validation_tests.py  run_compile_test_all.py  run_validations.py  runtests.py  runtests27.sh  runtests38.sh  (+6 more)
anuga/: __config__.py  __init__.py  __metadata__.py  animate.py  anuga_exceptions.py  compile_all.py  config.py  error_api.py  extras.py  meson.build  old_setup.py  revision.py  setup.py  test_all.py
anuga/abstract_2d_finite_volumes/: __init__.py  ermapper_grids.py  file_function.py  gauge.py  general_mesh.py  generic_boundary_conditions.py  generic_domain.py  mesh_factory.py  mesh_factory_ext.c  mesh_factory_ext.pyx  meson.build  neighbour_mesh.py  neighbour_mesh_ext.c  neighbour_mesh_ext.pyx  neighbour_table.cpp  neighbour_table_ext.c  neighbour_table_ext.cpp  neighbour_table_ext.pyx  neighbour_table_interface.pyx  pmesh2domain.c  pmesh2domain.py  pmesh2domain_ext.c  pmesh2domain_ext.pyx  quantity.c  quantity.py  quantity_cuda.c  quantity_ext.c  quantity_ext.pyx  quantity_interface.pyx  quantity_openacc.c  quantity_openacc_ext.pyx  quantity_openmp.c  quantity_openmp_ext.pyx  region.py  setup.py  tag_region.py  util.py
anuga/advection/: __init__.py  advection.c  advection.py  advection_ext.pyx  meson.build  setup.py
anuga/alpha_shape/: __init__.py  alpha_shape.py  meson.build  setup.py
anuga/caching/: __init__.py  caching.py  dummy_classes_for_testing.py  meson.build  setup.py
anuga/coordinate_transforms/: __init__.py  geo_reference.py  lat_long_UTM_conversion.py  meson.build  point.py  redfearn.py  setup.py
anuga/culvert_flows/: __init__.py  culvert_class.py  culvert_polygons.py  culvert_routines.py  meson.build  new_culvert_class.py  setup.py
anuga/damage_modelling/: __init__.py  exposure.py  inundation_damage.py  meson.build  setup.py
anuga/file/: __init__.py  csv_file.py  meson.build  mux.py  netcdf.py  setup.py  structure.h  sts.py  sww.py  ungenerate.py  urs.c  urs.py  urs_ext.pyx
anuga/file_conversion/: __init__.py  asc2dem.py  calc_grid_values.c  calc_grid_values_ext.c  calc_grid_values_ext.pyx  csv2sts.py  dem2array.py  dem2dem.py  dem2pts.py  esri2sww.py  ferret2sww.py  file_conversion.py  grd2array.py  ll2array.py  llasc2pts.py  meson.build  sdf2pts.py  setup.py  sts2sww_mesh.py  sww2array.py  sww2dem.py  sww2dem_new.py  sww2pts.py  tif2array.py  tif2array_lat_long.py  tif2point_values.py  urs2nc.py  urs2sts.py  urs2sww.py  urs2txt.py  xya2pts.py
anuga/fit_interpolate/: __init__.py  benchmark_least_squares.py  fit.py  fitsmooth.c  fitsmooth_ext.pyx  general_fit_interpolate.py  interpolate.py  interpolate2d.py  meson.build  profile_long_benchmark.py  ptinpoly.c  run_long_benchmark.py  setup.py  ticket178_benchmark.py
anuga/geometry/: __init__.py  aabb.py  meson.build  polygon.c  polygon.py  polygon_ext.c  polygon_ext.pyx  polygon_function.py  quad.py  setup.py
anuga/geospatial_data/: __init__.py  geospatial_data.py  meson.build  setup.py
anuga/lib/: README_maxasc.txt  __init__.py  add_csv_header.py  maxasc.py  meson.build  order_boundary.py  setup.py
anuga/load_mesh/: __init__.py  loadASCII.py  meson.build  setup.py
anuga/mesh_engine/: compile.py  mesh_engine.py  mesh_engine_c_layer.c  mesh_engine_ext.pyx  meson.build  setup.py
anuga/operators/: __init__.py  base_operator.py  boundary_flux_integral_operator.py  change_friction_operator.py  collect_max_quantities_operator.py  collect_max_stage_operator.py  compile_all.py  elliptic_operator.py  erosion_operators.py  infiltration_operator.py  kinematic_viscosity_operator.c  kinematic_viscosity_operator.py  kinematic_viscosity_operator_ext.pyx  mannings_operator.c  mannings_operator.py  mannings_operator_ext.c  mannings_operator_ext.pyx  meson.build  rate_operators.py  sanddune_erosion_operator.py  sed_transport_operator.py  sed_transport_operator_config.py  set_elevation.py  set_elevation_operator.py  set_friction_operators.py  set_quantity.py  set_quantity_operator.py  set_stage.py  set_stage_operator.py  set_w_uh_vh_operator.py  setup.py  vegetation_operator.py
anuga/parallel/: __init__.py  config.py  distribute_mesh.py  meson.build  parallel_advection.py  parallel_api.py  parallel_boyd_box_operator.py  parallel_boyd_pipe_operator.py  parallel_generic_communications.py  parallel_inlet.py  parallel_inlet_enquiry.py  parallel_inlet_operator.py  parallel_internal_boundary_operator.py  parallel_meshes.py  parallel_operator_factory.py  parallel_shallow_water.py  parallel_structure_operator.py  parallel_weir_orifice_trapezoid_operator.py  print_stats.py  pypar_ext.py  sequential_distribute.py  setup.py
anuga/pmesh/: AppShell.py  Pmw.py  PmwBlt.py  PmwColor.py  ProgressBar.py  README.txt  __init__.py  anuga_pmesh_gui.py  compile.py  cursornames.py  graphical_mesh_generator.py  mesh.py  mesh_interface.py  mesh_quadtree.py  meson.build  setup.py  timing.py  toolbarbutton.py  view_tsh.bat  visualmesh.py
anuga/pymetis/: metis_ext.pyx  setup.py
anuga/pymetis_4/: __init__.py  metis_bridge.c  metis_ext.pyx  setup.py
anuga/rain/: __init__.py  calibrated_radar_rain.py  extract_routines.py  grid_data.py  meson.build  rain_gui.py  raster_time_slice_data.py  run_calibrated_radar_rain.py  run_raster_time_slice_data.py
anuga/shallow_water/: __init__.py  boundaries.py  checkpoint.py  cuda_anuga.cu  forcing.py  friction.py  meson.build  most2nc.py  setup.py  shallow_water.c  shallow_water_domain.py  shallow_water_ext.c  shallow_water_ext.pyx  shallow_water_header.pxd  shallow_water_interface.pyx  swDE1_domain.c  sw_domain.h  (+42 more)
(+3107 files in other folders)
