
python_sources = [
  'AppShell.py',
  'cursornames.py',
  'exesetup.py',
  'anuga_pmesh_gui.py',
  '__init__.py',
  'mesh_interface.py',
  'mesh.py',
  'mesh_quadtree.py',
  'ProgressBar.py',
  'setup.py',
  'timing.py',
  'toolbarbutton.py',
  'ungen_example.py',
  'visualmesh.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/pmesh'
)

subdir('tests')