
python_sources = [
'boyd_box_operator_Amended3.py',
'boyd_box_operator.py',
'boyd_pipe_operator.py',
'__init__.py',
'inlet_enquiry.py',
'inlet_operator.py',
'inlet.py',
'internal_boundary_functions.py',
'internal_boundary_operator.py',
'riverwall.py',
'setup.py',
'structure_operator.py',
'weir_orifice_trapezoid_operator.py',
  ]

py3.install_sources(
  python_sources,
  subdir: 'anuga/structures'
)

subdir('tests')