
python_sources = [
  'culvert_polygons_example.py',
  '__init__.py',
  'run_culvert_flat_water_lev.py',
  'test_culvert_class.py',
  'test_culvert_polygons.py',
  'test_culvert_routines_box_10pct.py',
  'test_culvert_routines_box_1pct.py',
  'test_culvert_routines_pipe_10pct.py',
  'test_culvert_routines_pipe_1pct.py',
  'test_culvert_routines.py',
  'test_new_culvert_class.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/culvert_flows/tests'
)

subdir('data')
