
python_sources = [
  '__init__.py',
  'test_2pts.py',
  'test_csv2sts.py',
  'test_dem2array.py',
  'test_dem2dem.py',
  'test_dem2pts.py',
  'test_file_conversion.py',
  'test_grd2array.py',
  'test_llasc2pts.py',
  'test_sww2dem.py',
  'test_tif2.py',
  'test_urs2sts.py',
  'test_urs2sww.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/file_conversion/tests'
)
