
python_sources = [
  'perthAll_stage_250m_all.lic',
  'perthAll_stage_250m.lic',
  'perthAll_stage_original.lic',
  'test1.asc',
  'test1_bad_num_lines.asc',
  'test1_bad_num_lines.lic',
  'test1_header_differs.asc',
  'test1_header_differs.lic',
  'test1.lic',
  'test1_wrong_num_columns.asc',
  'test1_wrong_num_columns.lic',
  'test2.asc',
  'test2.expected.asc',
  'test2.expected.lic',
  'test2.lic',
  'test3.asc',
  'test3.expected.asc',
  'test3.expected.lic',
  'test3.lic',
  'test_maxasc.py',
  'test_order_boundary.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/lib/tests'
)
