
python_sources = [
'test_base_operator.py',
'test_boundary_flux_integral_operator.py',
'test_erosion_operators.py',
'test_kinematic_viscosity_operator.py',
'test_rate_operators.py',
'test_set_elevation_operator.py',
'test_set_quantity.py',
'test_set_stage_operator.py',
'test_set_w_uh_vh_operators.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/operators/tests'
)
