
python_sources = [
  'run_parallel_distribute_domain.py',
  'run_parallel_distribute_mesh.py',
  'run_parallel_riverwall.py',
  'run_parallel_shallow_domain.py',
  'run_parallel_sw_flow.py',
  'skip_parallel_boyd_box_op_apron.py',
  'skip_parallel_boyd_box_operator.py',
  'skip_parallel_boyd_pipe_operator.py',
  'skip_parallel_distribute_mesh.py',
  'test_distribute_mesh.py',
  'test_failure.py',
  'test_parallel_boyd_box_operator_consistency.py',
  'test_parallel_boyd_box_operator.py',
  'test_parallel_distribute_domain.py',
  'test_parallel_dist_settings.py',
  'test_parallel_file_boundary.py',
  'test_parallel_frac_op.py',
  'test_parallel_inlet_operator.py',
  'test_parallel_inlet_operator_with_region.py',
  'test_parallel_riverwall.py',
  'test_parallel_shallow_domain.py',
  'test_parallel_sw_flow_de0.py',
  'test_parallel_sw_flow_low_froude_0.py',
  'test_parallel_sw_flow_low_froude_1.py',
  'test_parallel_sw_flow.py',
  'test_sequential_dist_sw_flow.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/parallel/tests'
)
