

python_sources = [
'__init__.py',
'test_data_manager.py',
'test_DE_orig.py',
'test_DE_openmp.py',
'test_DE_simd.py',
'test_DE_cuda.py',
'test_forcing.py',
'test_friction.py',
'test_loadsave.py',
'test_local_extrapolation_and_flux_updating.py',
'test_most2nc.py',
'test_shallow_water_domain.py',
'test_sww_interrogate.py',
'test_system.py',
'test_timezone.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/shallow_water/tests'
)

subdir('data')
subdir('urs_test_data')