
python_sources = [
  'test_boyd_box_operator.py',
  'test_boyd_pipe_operator.py',
  'test_inlet_operator.py',
  'test_internal_boundary_functions.py',
  'test_riverwall_structure.py',
  'test_weir_orifice_trapezoid_operator.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/structures/tests'
)

subdir('data')