

python_sources = [
'test_cg_solve.py',
'test_csv_tools.py',
'test_data_audit.py',
'test_file_utils.py',
'test_function_utils.py',
'test_log_analyser.py',
'test_mem_time_equation.py',
'test_model_tools.py',
'test_numerical_tools.py',
'test_plot_utils.py',
'test_quantity_setting_functions.py',
'test_sparse.py',
'test_spatialInputUtil.py',
'test_system_tools.py',
'test_xml_tools.py',
]

py3.install_sources(
  python_sources,
  subdir: 'anuga/utilities/tests'
)

subdir('data')