
data_sources = [
  'projection_test_points.csv',
  'projection_test_points.lic',
  'projection_test_points_z53.csv',
  'projection_test_points_z53.lic',
  'projection_test_points_z54.csv',
  'projection_test_points_z54.lic',
  'redfearn.lic',
  'redfearn.xls'
]

py3.install_sources(
  data_sources,
  subdir: 'anuga/coordinate_transforms/tests/data'
)

