

data_sources = [
  '1-z.grd-e-mux2',
  '1-z.grd-n-mux2',
  '1-z.grd-z-mux2',
  '1-z.lic',
  '2-z.grd-e-mux2',
  '2-z.grd-n-mux2',
  '2-z.grd-z-mux2',
  '2-z.lic',
  '3-z.grd-e-mux2',
  '3-z.grd-n-mux2',
  '3-z.grd-z-mux2',
  '3-z.lic',
  'e_1_0.csv',
  'e_1_0.lic',
  'e_1_1.csv',
  'e_1_1.lic',
  'e_1_2.csv',
  'e_1_2.lic',
  'e_1_3.csv',
  'e_1_3.lic',
  'e_1_4.csv',
  'e_1_4.lic',
  'e_2_0.csv',
  'e_2_0.lic',
  'e_2_1.csv',
  'e_2_1.lic',
  'e_2_2.csv',
  'e_2_2.lic',
  'e_2_3.csv',
  'e_2_3.lic',
  'e_2_4.csv',
  'e_2_4.lic',
  'e_3_0.csv',
  'e_3_0.lic',
  'e_3_1.csv',
  'e_3_1.lic',
  'e_3_2.csv',
  'e_3_2.lic',
  'e_3_3.csv',
  'e_3_3.lic',
  'e_3_4.csv',
  'e_3_4.lic',
  'e_combined_0.csv',
  'e_combined_0.lic',
  'e_combined_1.csv',
  'e_combined_1.lic',
  'e_combined_2.csv',
  'e_combined_2.lic',
  'e_combined_3.csv',
  'e_combined_3.lic',
  'e_combined_4.csv',
  'e_combined_4.lic',
  'n_1_0.csv',
  'n_1_0.lic',
  'n_1_1.csv',
  'n_1_1.lic',
  'n_1_2.csv',
  'n_1_2.lic',
  'n_1_3.csv',
  'n_1_3.lic',
  'n_1_4.csv',
  'n_1_4.lic',
  'n_2_0.csv',
  'n_2_0.lic',
  'n_2_1.csv',
  'n_2_1.lic',
  'n_2_2.csv',
  'n_2_2.lic',
  'n_2_3.csv',
  'n_2_3.lic',
  'n_2_4.csv',
  'n_2_4.lic',
  'n_3_0.csv',
  'n_3_0.lic',
  'n_3_1.csv',
  'n_3_1.lic',
  'n_3_2.csv',
  'n_3_2.lic',
  'n_3_3.csv',
  'n_3_3.lic',
  'n_3_4.csv',
  'n_3_4.lic',
  'n_combined_0.csv',
  'n_combined_0.lic',
  'n_combined_1.csv',
  'n_combined_1.lic',
  'n_combined_2.csv',
  'n_combined_2.lic',
  'n_combined_3.csv',
  'n_combined_3.lic',
  'n_combined_4.csv',
  'n_combined_4.lic',
  'thinned_bound_order_test.lic',
  'thinned_bound_order_test.txt',
  'z_1_0.csv',
  'z_1_0.lic',
  'z_1_1.csv',
  'z_1_1.lic',
  'z_1_2.csv',
  'z_1_2.lic',
  'z_1_3.csv',
  'z_1_3.lic',
  'z_1_4.csv',
  'z_1_4.lic',
  'z_2_0.csv',
  'z_2_0.lic',
  'z_2_1.csv',
  'z_2_1.lic',
  'z_2_2.csv',
  'z_2_2.lic',
  'z_2_3.csv',
  'z_2_3.lic',
  'z_2_4.csv',
  'z_2_4.lic',
  'z_3_0.csv',
  'z_3_0.lic',
  'z_3_1.csv',
  'z_3_1.lic',
  'z_3_2.csv',
  'z_3_2.lic',
  'z_3_3.csv',
  'z_3_3.lic',
  'z_3_4.csv',
  'z_3_4.lic',
  'z_combined_0.csv',
  'z_combined_0.lic',
  'z_combined_1.csv',
  'z_combined_1.lic',
  'z_combined_2.csv',
  'z_combined_2.lic',
  'z_combined_3.csv',
  'z_combined_3.lic',
  'z_combined_4.csv',
  'z_combined_4.lic',
]

py3.install_sources(
  data_sources,
  subdir: 'anuga/shallow_water/tests/urs_test_data'
)